# antfx

./: .gitignore  Makefile  Makefile.am  README.md  antfly  antfly.c  antfx.c  antfx.h  antfxapp.c  audio.c  audio.h  backend.h  bst.c  bst.h  conf.c  conf.h  config.ini  configure.ac  db.c  db.h  default.h  engine.h  engine_interface.h  fbmmap.c  gui.c  gui.h  hw.c  hw.h  list.c  list.h  log.h  loopback.c  lv_conf.h  media.c  media.h  supports.c  supports.h  types.h  utils.c  utils.h  (+2 more)
backends/: fb_engine.c  sdl2_engine.c
engines/: fb_engine.c  sdl2_engine.c
fonts/: DejaVuSans_ExtraLight6pt7b  DejaVuSans_ExtraLight7pt7b  FreeMonoBoldOblique12pt7b.bf  FreeMonoBoldOblique24pt7b.bf  FreeMonoOblique18pt7b.bf  FreeMonoOblique24pt7b.bf  FreeSans18pt7b.bf  FreeSansBoldOblique24pt7b.bf  FreeSerif9pt7b.bf  FreeSerifBold18pt7b.bf  FreeSerifBold9pt7b.bf
lib/: Makefile.am  lvgl.h
lib/liblv/lv_core/: lv_obj.c
test/: test_supports.c
test/scripts/: init.lua
tools/: gfx.h
tools/fonts/: DejaVuSans6pt7b  FreeMonoBold24pt7b.bf  FreeMonoOblique12pt7b.bf  FreeSans9pt7b.bf  FreeSansBold12pt7b.bf  FreeSansBoldOblique12pt7b.bf  FreeSansOblique24pt7b.bf  FreeSerif12pt7b.bf  FreeSerif24pt7b.bf  FreeSerifBold12pt7b.bf  FreeSerifBoldItalic12pt7b.bf  FreeSerifBoldItalic18pt7b.bf  FreeSerifBoldItalic9pt7b.bf  FreeSerifItalic24pt7b.bf  FreeSerifItalic9pt7b.bf  SourceCodePro_Light6pt7b.bf  UbuntuMono_R6pt7b  UbuntuMono_R9pt7b.bf  saxmono6pt7b
widgets/: font.c  font.h  image.c  image.h  widgets.h  window.c  window.h
widgets/fonts/: FreeMono12pt7b.h  FreeMono18pt7b.h  FreeMono24pt7b.h  FreeMono9pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeMonoBold24pt7b.h  FreeMonoBold9pt7b.h  FreeMonoBoldOblique12pt7b.h  FreeMonoBoldOblique18pt7b.h  FreeMonoBoldOblique24pt7b.h  FreeMonoBoldOblique9pt7b.h  FreeMonoOblique12pt7b.h  FreeMonoOblique18pt7b.h  FreeMonoOblique24pt7b.h  FreeMonoOblique9pt7b.h  FreeSans12pt7b.h  FreeSans18pt7b.h  FreeSans24pt7b.h  FreeSans9pt7b.h  FreeSansBold12pt7b.h  FreeSansBold18pt7b.h  FreeSansBold24pt7b.h  FreeSansBold9pt7b.h  FreeSansBoldOblique12pt7b.h  FreeSansBoldOblique18pt7b.h  FreeSansBoldOblique24pt7b.h  FreeSansBoldOblique9pt7b.h  FreeSansOblique12pt7b.h  FreeSansOblique18pt7b.h  FreeSansOblique24pt7b.h  FreeSansOblique9pt7b.h  FreeSerif12pt7b.h  FreeSerif18pt7b.h  FreeSerif24pt7b.h  FreeSerif9pt7b.h  FreeSerifBold12pt7b.h  FreeSerifBold18pt7b.h  FreeSerifBold24pt7b.h  FreeSerifBold9pt7b.h  (+13 more)
widgets/icons/: alarm.c  calendar.c  camera.c  radio.c  w01d.c  w01n.c  w02d.c  w02n.c  w03d.c  w04d.c  w09d.c  w10d.c  w10n.c  w11d.c  w13d.c  w50d.c
